# QnaValidator

./: LICENSE  README.md  pyproject.toml  qna_validator.py  requirements.txt
